program install in /usr/bin . and config moved to /etc/tbcli. now i read log tor with journalctl

--- a/tbcli.conf
+++ b/tbcli.conf
@@ -6,16 +6,13 @@ tor_config_file="/etc/tor/torrc"
 # url get bridge
 url_bridges="https://bridges.torproject.org/bridges?transport=obfs4"
 
+##sudo systemctl status tor@default.service
+
 # change variables if you dont use systemd deamon manager  
-tor_restart="systemctl restart tor.service"
-tor_status="systemctl status tor.service"
-####
-# if u cant see log tor with systemctl status tor.service 
-#### install : 
-# sudo apt install apparmor-utils
-# sudo aa-complain system_tor
-#### then use this variable 
-# tor_status="sudo systemctl status tor@default.service"
+function tor_restart(){ systemctl restart tor.service ;}
+function tor_status(){ journalctl --no-pager -t Tor |tail -n "7" |sed 's/^.*]: //g'; }
+function active_bridges(){ grep "^Bridge" $tor_config_file |wc -l ;}
+
 # temp files 
 HTML_FILE="img.html"
 IMAGE_CAPTCHA_FILE="captcha.jpg"
