now bridges added after line 'ClientTransportPlugin obfs4 exec' into torrc

--- a/tbcli.conf
+++ b/tbcli.conf
@@ -9,8 +9,8 @@ url_bridges="https://bridges.torproject.org/bridges?transport=obfs4"
 ##sudo systemctl status tor@default.service
 
 # change variables if you dont use systemd deamon manager  
-function tor_restart(){ systemctl restart tor.service ;}
-function tor_status(){ journalctl --no-pager -t Tor |tail -n "10" |sed 's/^.*]: //g'; }
+function tor_restart(){ systemctl restart tor.service ; sleep 1 ; }
+function tor_status(){ journalctl --no-pager -t Tor |tail -n "100" |sed 's/^.*]: //g'; }
 function active_bridges(){ grep "^Bridge" $tor_config_file |wc -l ;}
 
 # temp files 
