colored log file . change status color in config file /etc/tbcli/tbcli.conf

--- a/tbcli.conf
+++ b/tbcli.conf
@@ -10,9 +10,12 @@ url_bridges="https://bridges.torproject.org/bridges?transport=obfs4"
 
 # change variables if you dont use systemd deamon manager  
 function tor_restart(){ systemctl restart tor.service ; sleep 0.5 ; }
-function tor_status(){ journalctl --no-pager -t Tor |tail -n "10" |sed 's/^.*]: //g'; }
+function tor_stop()   { systemctl stop tor.service ; }
+function tor_status() { 
+    [[ -z "$1" ]] && size_history=10 || size_history="$1"
+    journalctl --no-pager -t Tor |tail -n "$size_history" |sed 's/^.*]: //g'; 
+}
 function active_bridges(){ grep "^Bridge" $tor_config_file |wc -l ;}
-
 # temp files 
 HTML_FILE="img.html"
 IMAGE_CAPTCHA_FILE="captcha.jpg"
@@ -42,3 +45,15 @@ white="\e[97m"
 
 # tor reset separator
 reset_sep="${light_red} >${light_blue}%"
+
+# text separator
+sep_light_red="${light_red}---------------------------------------------------"
+
+# tor status setting color
+status_sep="${light_blue}---------------------------------------------------"
+status_color="\e[0;2;93m"
+status_num_color="\e[0;1;91m"
+status_important="\e[0;1;92m"
+status_important_line="\e[0;2;92m"
+status_bad_bridge="\e[0;1;91m"
+status_bad_bridge_line="\e[0;2;91m"
