clear function updated.new image added

--- a/tbcli.conf
+++ b/tbcli.conf
@@ -57,3 +57,6 @@ status_important="\e[0;1;92m"
 status_important_line="\e[0;2;92m"
 status_bad_bridge="\e[0;1;91m"
 status_bad_bridge_line="\e[0;2;91m"
+
+# clear broken bridges
+clear_text="\e[0;2;1;91m"
