bugs fixes and help updated

--- a/tbcli.conf
+++ b/tbcli.conf
@@ -46,8 +46,8 @@ white="\e[97m"
 # tor reset separator
 reset_sep="${light_red} >${light_blue}%"
 
-# text separator
-sep_light_red="${light_red}---------------------------------------------------"
+# sections separator
+sections_sep="${light_red}---------------------------------------------------"
 
 # tor status setting color
 status_sep="${light_blue}---------------------------------------------------"
