broken bridges fixed
colors updated

--- a/tbcli.conf
+++ b/tbcli.conf
@@ -15,7 +15,7 @@ function tor_status() {
     [[ -z "$1" ]] && size_history=10 || size_history="$1"
     journalctl --no-pager -t Tor |tail -n "$size_history" |sed 's/^.*]: //g'; 
 }
-function active_bridges(){ grep "^Bridge" $tor_config_file |wc -l ;}
+function active_bridges(){ grep "^ *Bridge" $tor_config_file |wc -l ;}
 # temp files 
 HTML_FILE="img.html"
 IMAGE_CAPTCHA_FILE="captcha.jpg"
@@ -25,38 +25,39 @@ BridgeFile="bridges.txt"
 IpSite="icanhazip.com"
 
 # colors 
-nc="\e[0m"
-black="\e[30m"
-red="\e[31m"
-green="\e[32m"
-yellow="\e[33m"
-blue="\e[34m"
-magenta="\e[35m"
-cyan="\e[36m"
-light_gray="\e[37m"
-dark_gray="\e[90m"
-light_red="\e[91m"
-light_green="\e[92m"
-light_yellow="\e[93m"
-light_blue="\e[94m"
-light_magenta="\e[95m"
-light_cyan="\e[96m"
-white="\e[97m"
+nc="\e[m"
+black="\e[0;30m"
+red="\e[0;31m"
+green="\e[0;32m"
+yellow="\e[0;33m"
+blue="\e[0;34m"
+magenta="\e[0;35m"
+cyan="\e[0;36m"
+white="\e[0;37m"
+
+light_gray="\e[0;1;90m"
+light_red="\e[0;1;91m"
+light_green="\e[0;1;92m"
+light_yellow="\e[0;1;93m"
+light_blue="\e[0;1;94m"
+light_magenta="\e[0;1;95m"
+light_cyan="\e[0;1;96m"
+light_white="\e[0;1;97m"
 
 # tor reset separator
 reset_sep="${light_red} >${light_blue}%"
 
 # sections separator
-sections_sep="${light_red}---------------------------------------------------"
+sections_sep="$light_red---------------------------------------------------"
 
 # tor status setting color
-status_sep="${light_blue}---------------------------------------------------"
-status_color="\e[0;2;93m"
-status_num_color="\e[0;1;91m"
-status_important="\e[0;1;92m"
-status_important_line="\e[0;2;92m"
-status_bad_bridge="\e[0;1;91m"
-status_bad_bridge_line="\e[0;2;91m"
+status_sep="$light_blue---------------------------------------------------"
+status_color="$light_yellow"
+status_num_color="$light_red"
+status_important="$light_green"
+status_important_line="$light_green"
+status_bad_bridge="$light_red"
+status_bad_bridge_line="$light_red"
 
 # clear broken bridges
-clear_text="\e[0;2;1;91m"
+clear_text="$light_red"
